# pyansys-heart

./: .buildinfo  .coveragerc  .gitignore  .pre-commit-config.yaml  AUTHORS  CHANGELOG.md  CNAME  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.rst  contributing.html  genindex.html  ignore_words.txt  index.html  introduction.html  objects.inv  pyproject.toml  requirements_build.txt  requirements_build_conda.txt  requirements_build_pip.txt  requirements_docs.txt  requirements_preprocessor_conda.txt  requirements_tests.txt  robots.txt  search.html  searchindex.js  setup.py  sitemap.xml  tox.ini  versions.json
.github/: CODEOWNERS  dependabot.yml  labeler.yml  labels.yml
.github/workflows/: build-deplpy-docs.yml  ci_cd.yml  ci_cd_main.yml  ci_cd_night.yml  ci_cd_pr.yml  ci_cd_pyfluent.yml  ci_cd_release.yml  doc-build.yml  dummy-workflow.yml  label.yml  nightly-build-docs.yml  style.yml  style_check.yml  testing.yml  tests-model-generation-v1.yml  tests-model-generation-v2-bv.yml  tests-model-generation-v2-fh.yml  tests-model-generation-v2.yml  tests-model-generation.yml  tests-pyfluent.yml  tests_pyfluent.yml
ECGs_validation_typical/: postprocessor.py  preprocessor.py  simulator.py  visualization.ipynb
_sources/: contributing.rst.txt  index.rst.txt
_static/: documentation_options.js
ansys/heart/: __init__.py  _version.py  custom_logging.py  general.py
api/: index.html
api/preprocessor/: index.html
doc/: .gitignore  .vale.ini  Makefile  make.bat
doc/source/: acknowledgements.rst  auto_summary.rst  changelog.rst  conf.py  contributing.rst  getting-started.rst  index.rst  links.rst  user-guide.rst
examples/: README.rst  doc_example_EP_simulator_fourchamber.py  doc_example_mechanics_simulator_fourchamber.py
examples/AI_models/: Model_Evaluation.ipynb
examples/PCA/: Extract_torso.ipynb  GenerateNewModel.ipynb  PCA_model.py  PCA_model_with_heart_electrodes.ipynb  PCA_model_with_heart_electrodes.py  Registration.ipynb
examples/SensitivityAnalysis_MC/: postprocessor.py  preprocessor.py  simulator_endo.py  simulator_epi.py  simulator_mid_fixed.py  visualization.ipynb
examples/SensitivityAnalysis_Sigma/: postprocessor.py  preprocessor.py  simulator.py  visualization.ipynb
examples/heart/: .gitignore  README.rst  doc_mechanics_simulator_fourchamber.py
examples/postprocessor/: README.rst  doc_autopost_mechanical_simulation.py  doc_autopost_zerop_simulation.py  doc_posproc_ep_simulation.py  doc_postproc_ep_simulation.py  ep-post-process-reaction-eikonal.py  ep-postprocess-reaction-eikonal.py  post-process-reaction-eikonal_pr.py
examples/preprocessor/: ECG.ipynb  Heart_template_preprocessing.ipynb  ICP.ipynb  README.rst  Registration.ipynb  RigidTrans+ICP.ipynb  compute-atrial-fibers_pr.py  demo-material_pr.py  demo_material_pr.py  doc_demo_material.py  doc_download_case.py  doc_example_LA_fiber.py  doc_example_atrial_fiber.py  doc_example_stimulation.py  doc_example_uhc.py  doc_example_ventricle_fiber.py  doc_preprocess_fourchamber.py  doc_preprocess_fullheart_rodero_01 copy.py  doc_preprocess_fullheart_rodero_01.py  doc_preprocess_truncated_LV.py  download_case_pr.py  example_atrial_fiber_pr.py  example_uhc.py  inc-fast_demo_material.py  inc-fast_example_atrial_fiber.py  inc-fast_preprocess_truncated_LV.py  inc-long_doc_preprocess_fourchamber.py  preprocess-fullheart.py  preprocess-truncated-leftventricle_pr.py  preprocess_truncated_LV_pr.py  test.ipynb  test_def_10_electrodes.py  test_dyna_writer.py
examples/preprocessor_v0_2/: doc_example_atrial_fiber_v0_2.py  doc_preprocess_fullheart_rodero_01_v0_2.py  doc_simulate_fullheart_rodero_01_v0_2_ep.py
examples/simulator/: ECG_postproc.py  ECG_postprocessor.ipynb  README.rst  Test_params_changes.ipynb  doc_ECG_scenario.py  doc_EP-mechanics_simulator_fullheart_rodero.py  doc_EP_simulator_FullHeart_rodero copy.py  doc_EP_simulator_FullHeart_rodero.py  doc_EP_simulator_FullHeart_rodero_nightly.py  doc_EP_simulator_FullHeart_rodero_vt.py  doc_EP_simulator_fourchamber.py  doc_MECA_simulator_LeftVentricle_pr.py  doc_epmeca_cristobal01_fullheart.py  doc_example_EP_simulator_fourchamber.py  doc_example_mechanics_simulator_fourchamber.py  doc_mechanics_simulator_fourchamber.py  doc_mechanics_simulator_fullheart_new_rodero_01.py  doc_mechanics_simulator_fullheart_rodero_01.py  ep-mechanics-simulator-fullheart.py  ep-mechanics-simulator-fullheart_ignore.py  ep-simulator-fullheart_rodero.py  generate_ECG_scenario_meshsize.py  generate_params.py  mechanics-simulator-leftventricle.py  mechanics-simulator-leftventricle_pr.py  parameter_combinations.csv  parameter_combinations5.csv  patient5GTCpyansysheart_code.py  run_fiber_EP_with_params.py  run_generate_ECG_scenario.sh  run_lsdyna_file.py
examples/workflow/: ReadFib.py  compute_volume.py  pericardium_offset.py  post_system.py  run_mecha.py
getting_started/: index.html
tests/: test_metadata.py
tests/heart/: .gitignore  _deprecated_test_biventricle_mesh_extraction_with_bloodpool.py  _deprecated_test_fullheart_mesh_extraction.py  _disabled_test_biventricle_mesh_extraction_with_bloodpool.py  common.py  conftest.py  get_stats_of_reference_model.py  test_D3plotPost.py  test_add_read_purkinje.py  test_biventricle_mesh_extraction.py  test_biventricle_mesh_extraction_with_bloodpool.py  test_case_download.py  test_download_urls.py  test_downloader.py  test_ep_beam.py  test_fluent_mesh_reader.py  test_fullheart_mesh_extraction.py  test_fullheart_mesh_extraction1.py  test_heart_model.py  test_heart_model2.py  test_heart_model_plot.py  test_k_files_mechanics.py  test_logger.py  test_main.py  test_mesh_objects.py  test_misc.py  test_objects.py  test_parts.py  test_postprocess.py  test_pyfluent.py  test_read_purkinje.py  test_settings.py
user_guide/: index.html
version/: index.html
version/0.1/: .buildinfo  contributing.html  genindex.html  index.html  introduction.html  objects.inv  py-modindex.html  search.html  searchindex.js
version/0.10/: contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
(+4528 files in other folders)
