[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
# Check https://flit.readthedocs.io/en/latest/pyproject_toml.html for all available sections
name = "pyansys-heart"
version = "0.4.dev0"
description = "Python framework for heart modeling using ANSYS tools."
readme = "README.rst"
requires-python = ">=3.10,<4"
license = { file = "LICENSE" }
authors = [{ name = "ANSYS, Inc.", email = "pyansys.core@ansys.com" }]
maintainers = [{ name = "ANSYS, Inc.", email = "pyansys.core@ansys.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "ansys-dpf-core==0.10.0",
    "ansys-fluent-core==0.22.0",
    "deprecated==1.2.14",
    "dynalib==0.1.0",
    "h5py>=3.6.0",
    "importlib-metadata >=4.0",
    "Jinja2==3.1.2",
    "matplotlib==3.8.2",
    "meshio==5.3.4",
    "networkx==3.2.1",
    "numpy<=1.26.0",
    "pandas<=3.0.0",
    "pint==0.20.1",
    "pyvista==0.43.0",
    "scipy<=1.14.1",
    "tqdm==4.66.1",
    "validators==0.30.0",
    "vtk>=9.1.0",
    "wget==3.2",
]

# Optional dependencies:
[project.optional-dependencies]
doc = [
    "ansys-sphinx-theme[autoapi]==1.0.7",
    "jupyter_sphinx==0.5.3",
    "myst-parser==4.0.0",
    "numpydoc==1.8.0",
    "nbsphinx==0.9.5",
    "sphinx==8.0.2",
    "sphinx-autodoc-typehints==2.2.3",
    "sphinx-copybutton==0.5.2",
    "sphinx-gallery==0.14.0",
    "sphinxcontrib-video",
]

tests = ["pytest==8.0.1"]

[project.urls]
Source = "https://github.com/ansys/pyansys-heart"
Issues = "https://github.com/ansys/pyansys-heart/issues"
Documentation = "https://heart.docs.pyansys.com/"
Releases = "https://github.com/ansys/pyansys-heart/releases"

[tool.flit.module]
name = "ansys.heart"


[tool.black]
line-length = 100

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 100
default_section = "THIRDPARTY"
src_paths = ["doc", "src", "tests"]

[tool.coverage.run]
source = ["ansys.heart"]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = ["extract_models", "requires_fluent", "k_file_writer", "local", "downloader"]
tmp_path_retention_count = 0                                      # do not keep the temporary path that is created
tmp_path_retention_policy = "none"                                # directories always removed, regardless of outcome
