[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
# Check https://flit.readthedocs.io/en/latest/pyproject_toml.html for all available sections
name = "pyansys-heart"
version = "0.5.dev0"
description = "Python framework for heart modeling using ANSYS tools."
readme = "README.rst"
requires-python = ">=3.10,<4"
license = { file = "LICENSE" }
authors = [{ name = "ANSYS, Inc.", email = "pyansys.core@ansys.com" }]
maintainers = [{ name = "ANSYS, Inc.", email = "pyansys.core@ansys.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "ansys-dpf-core==0.10.0",
    "ansys-fluent-core==0.24.2",
    "deprecated==1.2.14",
    "dynalib==0.1.0",
    "h5py>=3.6.0",
    "importlib-metadata >=4.0",
    "Jinja2==3.1.2",
    "matplotlib==3.8.2",
    "meshio==5.3.4",
    "networkx==3.2.1",
    "numpy<=1.26.0",
    "pandas<=3.0.0",
    "pint==0.20.1",
    "pyvista==0.43.0",
    "scipy<=1.14.1",
    "tqdm==4.66.1",
    "validators==0.34.0",
    "vtk>=9.1.0",
    "wget==3.2",
]

# Optional dependencies:
[project.optional-dependencies]
doc = [
    "ansys-sphinx-theme[autoapi]==1.0.7",
    "jupyter_sphinx==0.5.3",
    "myst-parser==4.0.0",
    "numpydoc==1.8.0",
    "nbsphinx==0.9.5",
    "sphinx==8.0.2",
    "sphinx-autodoc-typehints==2.2.3",
    "sphinx-copybutton==0.5.2",
    "sphinx-gallery==0.14.0",
    "sphinxcontrib-video",
]

tests = ["pytest==8.0.1", "pytest-mock"]

[project.urls]
Source = "https://github.com/ansys/pyansys-heart"
Issues = "https://github.com/ansys/pyansys-heart/issues"
Documentation = "https://heart.docs.pyansys.com/"
Releases = "https://github.com/ansys/pyansys-heart/releases"

[tool.flit.module]
name = "ansys.heart"

[tool.ruff]
line-length = 100
fix = true
extend-exclude = ["tests/**", "src/ansys/heart/writer/**"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle, see https://docs.astral.sh/ruff/rules/#pycodestyle-e-w
    "D",    # pydocstyle, see https://docs.astral.sh/ruff/rules/#pydocstyle-d
    "F",    # pyflakes, see https://docs.astral.sh/ruff/rules/#pyflakes-f
    "I",    # isort, see https://docs.astral.sh/ruff/rules/#isort-i
    "N",    # pep8-naming, see https://docs.astral.sh/ruff/rules/#pep8-naming-n
    #"PTH",  # flake8-use-pathlib, https://docs.astral.sh/ruff/rules/#flake8-use-pathlib-pth
    "TD",   # flake8-todos, https://docs.astral.sh/ruff/rules/#flake8-todos-td
]
ignore = [
    "TD002", # Missing author in TODOs comment
    "TD003", # Missing date in TODOs comment
    "E721",  # Do not compare types, use 'isinstance()'
]

[tool.ruff.lint.per-file-ignores]
# Ignore `F401` (import violations) in all `__init__.py` files.
"__init__.py" = ["F401"]
# Ignore `D` rules everywhere except for the `src/` directory.
"!src/**.py" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
known-first-party = ["ansys.heart"]

[tool.coverage.run]
source = ["ansys.heart"]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = ["extract_models", "requires_fluent", "k_file_writer", "local", "downloader"]
tmp_path_retention_count = 0                                      # do not keep the temporary path that is created
tmp_path_retention_policy = "none"                                # directories always removed, regardless of outcome
