[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
# Check https://flit.readthedocs.io/en/latest/pyproject_toml.html for all available sections
name = "pyansys-heart"
version = "0.11.dev0"
description = "Python framework for heart modeling using ANSYS tools."
readme = "README.rst"
requires-python = ">=3.10,<4"
license = { file = "LICENSE" }
authors = [{ name = "ANSYS, Inc.", email = "pyansys.core@ansys.com" }]
maintainers = [{ name = "ANSYS, Inc.", email = "pyansys.core@ansys.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "ansys-dpf-core==0.13.6",
    "ansys-fluent-core==0.30.0",
    "deprecated==1.2.18",
    "ansys.dyna.core==0.7.1",
    "h5py>=3.6.0",
    "matplotlib==3.10.1",
    "networkx==3.2.1",
    "numpy<=2.2.4",
    "pandas<=3.0.0",
    "pint==0.24.4",
    "pyvista==0.44.1",
    "scipy<=1.15.2",
    "validators==0.34.0",
    "vtk>=9.1.0, < 9.4",
    "httpx>=0.28.1",
    "natsort>=8.4.0",
    "rich>=13.9.4"
]

# Optional dependencies:
[project.optional-dependencies]
doc = [
    "ansys-sphinx-theme[autoapi]==1.3.2",
    "jupyter_sphinx==0.5.3",
    "myst-parser==4.0.1",
    "numpydoc==1.8.0",
    "nbsphinx==0.9.6",
    "sphinx==8.2.1",
    "sphinx-autodoc-typehints==3.1.0",
    "sphinx-copybutton==0.5.2",
    "sphinx-gallery==0.19.0",
    "sphinx-jinja==2.0.2",
    "sphinxcontrib-video",
    "tox==4.24.2",
]

tests = [
    "pytest==8.3.5",
    "pytest-cov==6.0.0",
]

[project.urls]
Source = "https://github.com/ansys/pyansys-heart"
Issues = "https://github.com/ansys/pyansys-heart/issues"
Documentation = "https://heart.docs.pyansys.com/"
Releases = "https://github.com/ansys/pyansys-heart/releases"

[tool.flit.module]
name = "ansys.heart"

[tool.ruff]
line-length = 100
fix = true
extend-exclude = ["src/ansys/heart/writer/custom_keywords/**"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle, see https://docs.astral.sh/ruff/rules/#pycodestyle-e-w
    "D",    # pydocstyle, see https://docs.astral.sh/ruff/rules/#pydocstyle-d
    "F",    # pyflakes, see https://docs.astral.sh/ruff/rules/#pyflakes-f
    "I",    # isort, see https://docs.astral.sh/ruff/rules/#isort-i
    "N",    # pep8-naming, see https://docs.astral.sh/ruff/rules/#pep8-naming-n
    "TD",   # flake8-todos, https://docs.astral.sh/ruff/rules/#flake8-todos-td
]
ignore = [
    "TD002", # Missing author in TODOs comment
    "TD003", # Missing links in TODOs comment
]

[tool.ruff.lint.per-file-ignores]
# Ignore `F401` (import violations) in all `__init__.py` files.
"__init__.py" = ["F401"]
# Ignore `D` rules everywhere except for the `src/` directory.
"!src/**.py" = ["D"]
# ignore "E402" for examples
"examples/**.py" = ["E402"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
known-first-party = ["ansys.heart"]

[tool.coverage.run]
source = ["ansys.heart"]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = ["extract_models", "requires_fluent", "k_file_writer", "requires_dpf"]
tmp_path_retention_count = 0                                      # do not keep the temporary path that is created
tmp_path_retention_policy = "none"                                # directories always removed, regardless of outcome


[tool.towncrier]
directory = "doc/source/changelog"
filename = "doc/source/changelog.rst"
template = "doc/source/changelog/template.jinja"
start_string = ".. towncrier release notes start\n"
title_format = "`{version} <https://github.com/ansys/pyansys-heart/releases/tag/v{version}>`_ ({project_date})"
issue_format = "`#{issue} <https://github.com/ansys/pyansys-heart/pull/{issue}>`_"

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "documentation"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "test"
name = "Test"
showcontent = true

[[tool.towncrier.type]]
directory = "dependencies"
name = "Dependencies"
showcontent = true

[[tool.towncrier.type]]
directory = "maintenance"
name = "Maintenance"
showcontent = true

[[tool.towncrier.type]]
directory = "miscellaneous"
name = "Miscellaneous"
showcontent = true